{{$NEXT}}

0.003     2013-08-17 05:28:14 Europe/Moscow
  * Make it work on FreeBSD
  * Fix bug with long writes

0.002     2013-08-16 23:49:35 Europe/Moscow
  * Fix source repository information in docs

0.001     2013-08-16 23:40:12 Europe/Moscow
  * Initial release to CPAN