@@ -13,5 +13,12 @@ AutoMetaResources.bugtracker.github = user:vovkasm
 AutoMetaResources.bugtracker.rt = 0
 Authority.authority = cpan:VOVKASM
 
+[Prereqs / ConfigurePrereqs]
+-phase = configure
+-relationship = requires
+
+ExtUtils::CBuilder = 0
+Text::ParseWords = 0
+
 [=inc::DistMakeMaker]
 
