@@ -1,4 +1,5 @@
 {{$NEXT}}
+  * Fix CCFLAGS leak from build environment
 
 0.003     2013-08-17 05:28:14 Europe/Moscow
   * Make it work on FreeBSD
